[footnote] fix mobile: long link breaks the layout

--- a/source/css/noise.less
+++ b/source/css/noise.less
@@ -521,6 +521,10 @@ details[open] > figure:last-child {
     }
 }
 
+.footnotes * {
+    word-break: break-all;
+}
+
 // footer
 .footer {
     display: flex;
